# cl_project

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
applications/app_01/: default.json  info.json  requirements.txt
applications/app_01/src/: __init__.py  app.py
src/common_cl_code/: datasets.py
tests/: test_apps.py
workspace/day_notebooks/: 26-04-09.ipynb  26-04-13.ipynb
