[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cl_project"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
readme = "README.md"
#license = { text = "MIT" } #TODO: add license

dependencies = [
    "numpy>=2.4",
    "scipy>=1.17",
    "matplotlib>=3.10",
    "pandas>=3.0",
    "scikit-learn>=1.8",
    "jax>=0.9",
    "cl-sdk>=0.29",
]

[project.optional-dependencies]
dev = ["pytest", "nbstripout", "pyqt6>=6.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/cl_project"]

[tool.pytest.ini_options]
testpaths = ["tests"]
